--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <p>My main goal in my studies is to learn as much as I can to the everchanging world of computers and networks and clouds and cybersecurity and be able to adapt to these changes as needed. I am in for a long journey of learning but it is exciting to think about</p>
     <p>I never thought that coding would be as fun as it has been so far, but then again, we have not gotten to the nitty gritty yet so hopefully I hold onto this zeal.</p>
-    <p>i would like to start reading my percy jackson and the olympians books because I haven't yet, but school is taking up most of my time so that little hobby will definitely have to wait.</p>
+    <p>I would like to start reading my percy jackson and the olympians books because I haven't yet, but school is taking up most of my time so that little hobby will definitely have to wait.</p>
 
 
 
