--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>About Me</title>
+
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+         <link href="https://fonts.googleapis.com/css2?family=Bokor&family=Quintessential&display=swap" rel="stylesheet">
+
+         <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -17,7 +24,7 @@
 
 
     <main>
-<section>
+<section id="avatar">
         <img src="img/avataaars.png" alt="my avatar">
     <div>
           <p>Jefferson Rodriguez</p>
@@ -26,10 +33,10 @@
 </section>
 
 
-<section>
+<section id="bio">
 
 <div>
-         <p>I would like to be well versed in many different aspects of inforation technology from hardware troubleshooting to network troubleshooting</p>
+         <p>I would like to be well versed in many different aspects of information technology from hardware troubleshooting to network troubleshooting</p>
 
          <p>My main goal in my studies is to learn as much as I can to the everchanging world of computers and networks and clouds and cybersecurity and be able to adapt to these changes as needed. I am in for a long journey of learning but it is exciting to think about</p>
         <p>I never thought that coding would be as fun as it has been so far, but then again, we have not gotten to the nitty gritty yet so hopefully I hold onto this zeal.</p>
@@ -47,5 +54,11 @@
 
 </section>
     </main>
+
+    <footer>
+
+            ©2025 - Jefferson Rodriguez
+
+    </footer>
 </body>
 </html>
