adding hobbies list

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <section id="bio">
 
+    <h1>Get to Know Me:</h1>
+
 <div>
          <p>I would like to be well versed in many different aspects of information technology from hardware troubleshooting to network troubleshooting</p>
 
@@ -48,6 +50,27 @@
 
 
 </div>
+
+
+
+
+</section>
+
+<section id="hobbies">
+
+        <h2>Hobbies:</h2>
+
+        <ul>
+            <li>Playing video games (mainly multiplayer, competitive games)</li>
+            <li>Read articles and watch videos about many different topics</li>
+            <li>Look at computer parts (I like to take them apart and look inside)</li>
+            <li>Nature walks</li>
+            <li>Going out on drives</li>
+            <li>Practicing guitar</li>
+
+        </ul>
+
+
 
 
 
