ading photo gallery

--- a/index.html
+++ b/index.html
@@ -76,6 +76,31 @@
 
 
 </section>
+
+<section id="gallery">
+
+    <h2>Photo Gallery</h2>
+
+    <hr>
+
+    <figure>
+        <img src="img/assembly-img-640w.jpg" alt="taking apart computer">
+        <figcaption>The Computer Insides</figcaption>
+
+        <hr>
+
+        <img src="img/networking-img-640w.jpg" alt="Computer Networking">
+        <figcaption>Studying Networking Essentials</figcaption>
+
+        <hr>
+        
+        <img src="img/setup-img-640w.jpg" alt="my personal setup">
+        <figcaption>My Personal Computer Setup</figcaption>
+      </figure>
+
+
+</section>
+
     </main>
 
     <footer>
