--- a/index.html
+++ b/index.html
@@ -93,13 +93,28 @@
         <figcaption>Studying Networking Essentials</figcaption>
 
         <hr>
-        
+
         <img src="img/setup-img-640w.jpg" alt="my personal setup">
         <figcaption>My Personal Computer Setup</figcaption>
       </figure>
 
 
 </section>
+
+    <article id="lit">
+
+            <h2>The Lion King</h2>
+
+            <div>
+
+                <p>While others search for what they can take, a true king searches for what he can give. You got to put your behind in your past. Out of the ashes of this tragedy, we shall rise to greet the dawning of a new era. You got to put your past behind you. Look kid, bad things happen, and you can’t do anything about it, right? Love will find a way, anywhere we go. We’re home if we are there together. My Simba. You want so much to walk the path expected of you. Oh, Simba, thank you! You are truly noble! It’s truly up to you, I promise. And how can I approve myself to you? Tell me, I mean, anything. When the going gets tough, the tough get going. Believe in yourself and there will come a day when others will have no choice but to believe with you. Change is good. The question is, who are you? You’ve forgotten who you are so you forgot me, look inside yourself Simba, you are more than what you’ve become, you must take your place in the cirlce of life. </p>
+                
+                <p>Somebody once told me that the great kings of the past are up there, watching over us. Luau! If you’re hungry for a hunk of fat & juicy meat Eat my buddy, Pumbaa, here because he is a treat Come on down and dine on this tasty swine All you gotta do is get in line! Are you aching? As you go through life, you will see that there is so much that we don’t understand. And the only thing we know is things don’t always go the way we plan. They can have the world. We’ll create our own. Oh yes, the past can hurt. But, you can either run from it or, learn from it. Sometimes what’s left behind can grow better than the generation before. Change is good. They can have the world. We’ll create our own. When the going gets tough, the tough get going. Oh yes, the past can hurt. But, you can either run from it or, learn from it. There’s more to being a king than getting your way all the time. Sometimes what’s left behind can grow better than the generation before. </p>
+
+
+
+            </div>
+    </article>
 
     </main>
 
